styles/note.css
#noteArea
{
	max-height: 20vh;
	width: min-content;
	display: block;
	margin: 3vh auto 0 auto;
}

#note
{
	padding: 2vh;
	white-space: nowrap;
	background-color: rgba(10, 22, 48, 0.75);
	backdrop-filter: blur(10px);
}

#noteContinue
{
	width: 5vh;
	height: 5vh;
	line-height: 5vh;
	margin: 2vh auto 0 auto;

	font-size: 3vh;
	text-align: center;
	color: var(--color-light);
	opacity: 0;

	background-color: rgba(10, 22, 48, 0.75);
	backdrop-filter: blur(10px);
	border: 2px solid var(--color-light);
	border-radius: 50%;

	cursor: pointer;
	animation: animFadeIn 2s 1s ease-out forwards;
}

#noteContinue:hover
{
	color: var(--color-highlight);
	border-color: var(--color-highlight);
}

.noteText
{
	color: white;
	font-family: "Times New Roman", serif;
	/*font-style: italic;*/
	font-size: min(3vh, 6vw);
	line-height: min(4vh, 8vw);
}

.animatedWord
{
	display: inline-block;
	opacity: 0;
	animation: animFadeIn 0.5s ease-out forwards;
}

.animatedLine
{
	margin: 0;
	opacity: 0;
	animation: animFadeIn 2s ease-out forwards;
}

.animNoteIn, .animNoteOut
{
	animation-iteration-count: 1;
	animation-timing-function: ease;
	animation-fill-mode: forwards;
}
.animNoteIn
{
	opacity: 0;
	animation-name: animFadeIn;
	animation-duration: 1s;
	/* animation-delay: 1.75s;  */
}
.animNoteOut
{
	opacity: 1;
	animation-name: animFadeOut; /* Simply reverting "in" animation does't work */
	animation-duration: 0.2s;
}

